--- a/01.SQL_Basics.md
+++ b/01.SQL_Basics.md
@@ -3,15 +3,14 @@
           CREATE - execute INSERT statements to insert new tuple into the relation.
     2. READ - Read data already in the relations.
     3. UPDATE - Modify already inserted data in the relation.
-    4. DELETE - Delete specic data point/tuple/row or multiple rows.
+    4. DELETE - Delete specific data point/tuple/row or multiple rows.
 
 2. SQL is not DB, is a query language.
 3. What is RDBMS? (Relational Database Management System)
-    1. Software that enable us to implement designed relational model.
-    2. e.g., MySQL, MS SQL, Oracle, IBM etc.
-    3. Table/Relation is the simplest form of data storage object in R-DB.
-    4. MySQL is open-source RDBMS, and it uses SQL for all CRUD operations
-    5. MySQL used client-server model, where client is CLI or frontend that used services provided by MySQL server.
+    1. Software that enable us to implement designed relational model e.g., MySQL, MS SQL, Oracle, IBM etc.
+    2. Table/Relation is the simplest form of data storage object in R-DB.
+    3. MySQL is open-source RDBMS, and it uses SQL for all CRUD operations
+    4. MySQL used client-server model, where client is CLI or frontend that used services provided by MySQL server.
 4. Difference between SQL and MySQL
     SQL is Structured Query language used to perform CRUD operations in R-DB, while MySQL is a RDBMS used to
     store, manage and administrate DB (provided by itself) using SQL.
@@ -24,13 +23,13 @@
 ## Types of SQL Commands 
 1. DDL (data denition language): defining relation schema.
     1. CREATE: create table, DB, view.
-    2. ALTER TABLE: modication in table structure. e.g, change column datatype or add/remove columns.
+    2. ALTER TABLE: modification in table structure. e.g, change column datatype or add/remove columns.
     3. DROP: delete table, DB, view.
     4. TRUNCATE: remove all the tuples from the table.
     5. RENAME: rename DB name, table name, column name etc.
 2. DRL/DQL (data retrieval language / data query language): retrieve data from the tables.
     1. SELECT
-3. DML (data modication language): use to perform modications in the DB
+3. DML (data modification language): use to perform modications in the DB
     1. INSERT: insert data into a relation
     2. UPDATE: update relation data.
     3. DELETE: delete row(s) from the relation.
